--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -6,6 +6,8 @@ ng-md-icon {
 md-grid-tile{
   cursor: pointer;
 }
+
+
 .things-list {
  margin: 8px;
 }
@@ -38,6 +40,7 @@ md-grid-tile{
 .things-list md-grid-list {
   margin: 8px; }
 
+/*
 .things-list .gray {
   background: #f5f5f5; }
 
@@ -67,6 +70,8 @@ md-grid-tile{
 
 .things-list .pink {
   background: #ff80ab; }
+
+  */
 
 .things-list md-grid-tile .avatar-icon {
   padding-bottom: 32px; }
